--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Test</title></head><body><h1>Hello, world !!!</h1></body></html>
+<!DOCTYPE html><html><head><title>Test</title><link rel="stylesheet" href="style.css"></head><body><h1>Hello, world !!!</h1></body></html>
