--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><title>Test</title><link rel="stylesheet" href="style.css"></head><body><h1>Hello, world !!!</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Révisions</title>
+  </head>
+  <body>
+    <div class="menu">
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <h1>Bienvenue</h1>
+  </body>
+</html>
