modification index.htnl et style.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Révisions</title>
   </head>
   <body>
+    
     <div class="menu">
       <ul>
         <li><a href="#">Accueil</a></li>
@@ -14,6 +15,6 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
-    <h1>Bienvenue</h1>
-  </body>
-</html>
+    <h1 class="blanc">Bienvenue</h1>
+    
+</body>
